# SmartHealth_gps_parser

./: README.md  pyproject.toml
notebooks/: generate_synthetic_GPS.ipynb  get_all_LSOA21.ipynb  pseudonymise_GPS_data.ipynb
src/gps_parser/: synthetic_data.py
