[project]
name = "gps-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
get-lsoa = [
    "requests>=2.32.4",
]
synthetic = [
    "folium>=0.20.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
